remove horizontal scroll and try to fix the filter css

--- a/app/assets/stylesheets/videos/index/filters.scss
+++ b/app/assets/stylesheets/videos/index/filters.scss
@@ -71,11 +71,17 @@
   display: flex;
   flex-direction: column;
   max-width: 1900px;
-  height: 300px;
+  height: 325px;
+  overflow-x: auto;
   padding: 0 32px;
-  margin-bottom: 20px;
+  margin-bottom: 0.5rem;
   background-color: $secondary-color;
   border-bottom: 1px solid $border-color;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   #form-frame {
     flex: 1;
@@ -93,12 +99,12 @@
     top: -10px;
     min-width: 200px;
     margin: 0 8px;
-    font-size: .8rem;
+    font-size: 0.8rem;
     label {
       display: block;
       text-align: center;
       font-weight: 500;
-      font-size: .8rem;
+      font-size: 0.8rem;
       padding: 0 0 8px 0;
     }
   }
@@ -107,7 +113,9 @@
 .filter-container-upper {
   display: flex;
   height: 100%;
+  height: 272.5px;
 }
+
 
 .videos-sortable-container {
   display: flex;
