--- a/app/assets/stylesheets/videos/index/videos.scss
+++ b/app/assets/stylesheets/videos/index/videos.scss
@@ -1,6 +1,6 @@
 .video-section {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 20px 20px;
   padding: 0 40px 0 40px;
   background-color: $secondary-color;
@@ -9,7 +9,6 @@
 .video-container {
   display: flex;
   flex-direction: column;
-  min-height: 300px;
 }
 
 .thumbnail{
